// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persists to/from file autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from file autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from file autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from file autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from file loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from file saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from localStorage autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from localStorage autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from localStorage autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from localStorage autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from localStorage loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from localStorage saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableChangesListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableContentListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableContentListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableNoContentListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sessionStorage autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from sessionStorage autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from sessionStorage autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from sessionStorage autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from sessionStorage loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sessionStorage saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Supported, MergeableStore Changes in setPersisted 1`] = `
[
  "["Hc2DO@000008DKS9",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1]}]}]}],["",{}]]]",
  "["Hc2DO@000018DKS9",[["",{}],["Hc2DO@000018DKS9",{"v1":["Hc2DO@000018DKS9",1]}]]]",
]
`;

exports[`Supported, MergeableStore loading from legacy 1`] = `"["Hc2DO@000008DKS9",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1]}]}]}],["Hc2DO@000008DKS9",{"v1":["Hc2DO@000008DKS9",1]}]]]"`;
